--- a/gulimall-search/src/main/resources/templates/list.html
+++ b/gulimall-search/src/main/resources/templates/list.html
@@ -769,7 +769,7 @@
 
         </div>
         <div class="JD_ipone_one c">
-            <!--            遍历面包屑功能-->
+            <!--            遍历 屑功能-->
             <a th:href="${nav.link}" th:each="nav:${result.navs}"><span th:text="${nav.navName}"></span>：<span
                     th:text="${nav.navValue}"></span> ×</a>
         </div>
