--- a/gulimall-auth-server/src/main/resources/templates/login.html
+++ b/gulimall-auth-server/src/main/resources/templates/login.html
@@ -83,7 +83,7 @@
         <div class="si_out">
             <ul>
                 <li>
-                    <a href="https://api.weibo.com/oauth2/authorize?client_id=2636917288&response_type=code&redirect_uri=http://auth.gulimall.com/oauth2.0/weibo/success">
+                    <a href="https://api.weibo.com/oauth2/authorize?client_id=1482492789&response_type=code&redirect_uri=http%3A%2F%2Fauth.gulimall.com%2Foauth2.0%2Fweibo%2Fsuccess">
                         <img style="width: 50px;height: 18px" src="/static/login/JD_img/weibo.png"/>
                     </a>
                 </li>
